--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <title>Angular Training task1 - ShuhratBek</title>
     <meta name="description" content="">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no" />
+    <!-- Angular Material Framework CSS -->
     <link rel="stylesheet" href="./node_modules/angular-material/angular-material.css">
+    <!-- Material Web Font icons -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <!-- Main style -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body ng-controller="MainCtrl as mc">
 	<div layout="column" layout-fill>
+		<!-- BEGIN: ToolBar -->
 		<md-toolbar>
 			<div class="md-toolbar-tools">
 				<span>Angular Task1</span>
@@ -18,8 +22,11 @@
 				<span>ShuhratBek</span>
 			</div>
 		</md-toolbar>
+		<!-- END: ToolBar -->
+		<!-- BEGIN: Content -->
 		<md-content class="content" flex>
 			<div layout="row" layout-xs="column" layout-align="center top">
+				<!-- BEGIN: Form block -->
 				<md-card flex="50" flex-xs="90" layout-padding>
 					<form name="form" ng-submit="form.$valid && mc.submit()" novalidate>
 						<md-input-container class="md-icon-float md-block" flex>
@@ -62,23 +69,52 @@
 						</div>
 					</form>
 				</md-card>
+				<!-- END: Form block -->
+				<!-- BEGIN: Result block -->
 				<md-card flex layout-padding>
-					<h3 class="md-headline">Result:</h3>
-					<div>Username: {{mc.result.name}}</div>
-					<div>Age: {{mc.result.age}}</div>
-					<div>Birthday: {{mc.result.birthday}}</div>
-					<div>Greeting: {{mc.result.greeting}}</div>
+					<md-subheader class="md-primary">Result</md-subheader>
+					<md-list layout-padding>
+						<md-list-item class="md-2-line">
+							<div class="md-list-item-text">
+								<h3>Username:</h3>
+								<h4>{{mc.result.name}}</h4>
+							</div>
+						</md-list-item>
+						<md-list-item class="md-2-line">
+							<div class="md-list-item-text">
+								<h3>Age:</h3>
+								<h4>{{mc.result.age}}</h4>
+							</div>
+						</md-list-item>
+						<md-list-item class="md-2-line">
+							<div class="md-list-item-text">
+								<h3>Birthday:</h3>
+								<h4>{{mc.result.birthday}}</h4>
+							</div>
+						</md-list-item>
+						<md-list-item class="md-2-line">
+							<div class="md-list-item-text">
+								<h3>Greeting:</h3>
+								<h4>{{mc.result.greeting}}</h4>
+							</div>
+						</md-list-item>
+					</md-list>
 				</md-card>
+				<!-- END: Result block -->
 			</div>
 		</md-content>
+		<!-- END: Content -->
 	</div>
     <script src="./node_modules/angular/angular.js"></script>
     <script src="./node_modules/angular-aria/angular-aria.js"></script>
     <script src="./node_modules/angular-animate/angular-animate.js"></script>
     <script src="./node_modules/angular-messages/angular-messages.js"></script>
     <script src="./node_modules/angular-sanitize/angular-sanitize.js"></script>
+    <!-- Angular Material Framework JS -->
     <script src="./node_modules/angular-material/angular-material.js"></script>
+    <!-- Moment.js for date -->
     <script src="./node_modules/moment/moment.js"></script>
+    <!-- Main JS file -->
     <script src="index.js"></script>
 </body>
 </html>
